hphp/test/slow/reified_generics/error-function-call-4.php.expectf
Fatal error: Function f requires 2 generics but 1 given in %s on line 3
